fixed dark mode color

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -106,6 +106,7 @@
   border-radius: 5px;
   font-family: var(--letter-font);
   font-size: 1.7rem;
+  color: black;
   &:hover {
     scale: 1.1;
   }
@@ -159,6 +160,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center top;
+  color: black;
   // background-position: cove;
 }
 
